k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romplin-arena-service
spec:
  selector:
    app: romplin-arena  # 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000  #
  type: ClusterIP
