k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romplin-arena-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:747147941188:certificate/53d397d2-f8a5-416f-972d-b0a2e44d1051
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: romplin-arena.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: romplin-arena  # Changed to use your existing LoadBalancer service
                port:
                  number: 80
